--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.17",
+        "laravel/tinker": "^2.9",
+        "socialiteproviders/battlenet": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -18,6 +22,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "phpstan/phpstan": "*",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
